tests/fixtures/errors/ci/src/Admin.elm
module Admin exposing (main)

import Html


main =
    Html.div [ Html.text "Admin" ]
